# nerb

./: .gitignore  .kata.toml  AGENTS.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  zensical.toml
.agents/skills/nerb-cli-config/: SKILL.md
.agents/skills/nerb-extraction-surfaces/: SKILL.md
.agents/skills/nerb-large-source-bank-building/: SKILL.md
.agents/skills/nerb-large-source-bank-building/agents/: openai.yaml
.agents/skills/nerb-large-source-bank-building/references/: build-checklist.md
.agents/skills/nerb-mcp-tools/: SKILL.md
.agents/skills/nerb-release-publishing/: SKILL.md
.github/workflows/: build.yml  docs.yml  mypy.yml  publish.yml  tests.yml
docs/: anonymization.md  autoresearch.md  de-anonymization-plan.md  enron-bank-building.md  enron-benchmark.md  enron-evaluation.md  enron-evidence.md  enron-preparation.md  enron-splits.md  hero-images.md  index.md  interfaces.md  performance.md  quickstart.md  releasing.md  rust-engine-boundary.md  rust-engine-canonicalization.md  rust-engine-gates.md  schemas.md  workflows.md
docs/decisions/: 0001-rust-engine-semantics.md
docs/stylesheets/: extra.css
evidence/enron/: README.md  bank-card.json  benchmark-evidence.json  benchmark-manifest.json  capacity-decision.json  performance-report.json  publication.json  summary.md
evidence/enron/inventories/: controlled_dense_medium_inventory.json  controlled_negative_huge_inventory.json  controlled_negative_large_inventory.json  controlled_negative_medium_inventory.json  controlled_negative_small_inventory.json  controlled_normal_medium_inventory.json  controlled_sparse_medium_inventory.json  real_validation_inventory.json
examples/: README.md  generate_benchmark_hero_images.py  generate_showcase.py  music_entities.yaml  prog_rock_wiki.txt  prog_wiki.py
examples/artifacts/: summary.json
examples/artifacts/autoresearch/: results.jsonl
examples/artifacts/benchmarks/: compliance_ops.json  revenue_ops.json  security_ops.json
examples/artifacts/extractions/: compliance_ops.json  revenue_ops.json  security_ops.json
examples/artifacts/hero-images/: hero_measurements.json
examples/artifacts/reports/: compliance_ops.json  revenue_ops.json  security_ops.json
examples/artifacts/scale/: scale_measurements.json
examples/banks/: compliance_ops.json  revenue_ops.json  security_ops.json
examples/documents/: compliance_ops.txt  revenue_ops.txt  security_ops.txt
examples/intelligence_cache/: bank.json  candidate-review.json  new-message.txt  run.py  source.txt
rust/: Cargo.toml  build.rs
rust/src/: bank.rs  engine.rs  error.rs  flags.rs  formats.rs  ids.rs  lib.rs  match_buffer.rs
scripts/: enron_bank_build_benchmark.py  enron_native_capacity_probe.py  nerb_autoresearch.py  run_enron_capacity.py  rust_engine_gate_report.py  soak_enron_resource_observer.py
src/nerb/: __init__.py  _capacity_bootstrap.py  autoresearch.py  bank.py  benchmarks.py  cli.py  config.py  deanonymization.py  diagnostics.py  diff.py  engine.py  engines.py  enron_activity.py  enron_annotations.py  enron_audit_scoring.py  enron_bank_builder.py  enron_bank_workflow.py  enron_benchmark.py  enron_capacity.py  enron_catalog_adjudication.py  enron_cleaning.py  enron_conformance.py  enron_contract.py  enron_gold_annotations.py  enron_performance.py  enron_performance_fixtures.py  enron_performance_worker.py  enron_preparation.py  enron_private_io.py  enron_publication.py  enron_quality.py  enron_sealed_audit.py  enron_splitting.py  evals.py  extraction.py  literal_engine.py  mcp_server.py  named_entities.py  normalization.py  patches.py  (+9 more)
tests/: conftest.py
tests/data/: enron_bank_card_fake.json  enron_bank_card_real_50000.json  enron_bank_card_v2_fake.json  enron_bank_card_v2_real_50000.json  enron_bank_fake.json  enron_bank_v2_fake.json  enron_candidate_funnel_v2_fake.json  enron_candidate_funnel_v2_real_50000.json  enron_evidence.json  enron_evidence_v2.json  enron_manifest.json  enron_manifest_v2.json  enron_preparation.jsonl  enron_sample.jsonl  minimal_bank.json  music.yaml  music_entities.yaml
tests/data/evals/: acme_pattern.jsonl
tests/nerb/: conformance_helpers.py  test_autoresearch.py  test_bank.py  test_benchmarks.py  test_cli.py  test_config.py  test_deanonymization.py  test_diff.py  test_engine_module.py  test_enron_annotations.py  test_enron_audit_scoring.py  test_enron_bank_artifacts.py  test_enron_bank_builder.py  test_enron_bank_mining.py  test_enron_benchmark.py  test_enron_capacity.py  test_enron_capacity_evidence.py  test_enron_catalog_adjudication.py  test_enron_cleaning.py  test_enron_conformance.py  test_enron_contract.py  test_enron_gold_annotations.py  test_enron_performance.py  test_enron_performance_fixtures.py  test_enron_performance_subprocess.py  test_enron_performance_worker.py  test_enron_preparation.py  test_enron_private_io.py  test_enron_publication.py  test_enron_quality.py  test_enron_resource_observer.py  test_enron_sealed_audit.py  test_enron_splitting.py  test_evals.py  test_extraction.py  test_historical_v1_guards.py  test_intelligence_cache_example.py  test_json_bank_extraction.py  test_mcp_server.py  test_mcp_server_compat.py  (+9 more)
