[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "nerb"
version = "0.0.11"
description = "Named-entity bank validation and Rust-backed extraction"
readme = "README.md"
authors = [{ name = "Johnny Greco" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jsonpatch>=1.33",
    "jsonschema>=4.23",
    "mcp>=1.27,<2",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.scripts]
nerb = "nerb.cli:main"
nerb-mcp = "nerb.mcp_server:main"

[project.optional-dependencies]
tests = ["mypy>=1.14,<1.15", "pytest>=7.0"]
dev = [
    "mypy>=1.14,<1.15",
    "pytest>=7.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "zensical>=0.0.46,<0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14,<1.15",
    "pytest>=7.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "zensical>=0.0.46,<0.1",
]

[project.urls]
Homepage = "https://github.com/johnnygreco/nerb"
Documentation = "https://johnnygreco.dev/nerb/"
Repository = "https://github.com/johnnygreco/nerb"
Issues = "https://github.com/johnnygreco/nerb/issues"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
manifest-path = "rust/Cargo.toml"
module-name = "nerb._engine"
python-source = "src"
profile = "release"
strip = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["click", "click.*", "typer", "typer.*"]
follow_imports = "skip"

[tool.ty]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
