[package]
name = "nerb_engine"
version = "0.0.10"
edition = "2021"
description = "Native Rust engine skeleton for NERB"
license = "Apache-2.0"
repository = "https://github.com/johnnygreco/nerb"

[lib]
name = "nerb_engine"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
aho-corasick = "1.1.4"
pyo3 = "0.27"
regex-automata = "0.4.14"
regex-syntax = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
